@@ -3,6 +3,7 @@ Release ...
   default line breaking penalty; useful to discourage line breaks within
   a person's name or a formula. Relative values in the "\j" sequence now
   refer to the default penalty value.
+* dpost: Cast size_t arguments to long for printf (Stefan Tramm).
 
 Release 061212
 * [nt]roff: Relative numbers can be used with the ".pshape" request now;
